Fixed input bar being off centre

--- a/style.css
+++ b/style.css
@@ -108,6 +108,9 @@ header {
 box-shadow: inset 0 0 0 0 blue;
 transition: ease-in-out 0.9s;
 }
+.input-group input {
+  margin: 5px;
+}
 .input-group-append i:hover{
   background: #7c7c7c6b;
   box-shadow: inset 50px 0 0 0 blue;
